--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                             <a href="/gallery">Gallery</a>
                                         </li>
                                         <li>
-                                            <a href="/videos">Videos</a>
+                                            <a href="/PartyPlanner/videos">Videos</a>
                                         </li>
                                         <li>
                                             <a href="/contact">Contact</a>
