--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                                 <nav id="site-navigation" class="main-navigation left">
                                     <ul id="main-header-menu" class="menu">
                                         <li>
-                                            <a href="https://insynkevents.com">home</a>
+                                            <a href="/PartyPlanner/index">home</a>
                                         </li>
                                         <li>
-                                            <a href="/about-insynk.php">about us</a>
+                                            <a href="/PartyPlanner/about-insynk.php">about us</a>
                                         </li>
                                         <li id="services">
                                             <a href="javascript:openmenu()">Services</a>
@@ -146,13 +146,13 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="/gallery">Gallery</a>
+                                            <a href="/PartyPlanner/gallery">Gallery</a>
                                         </li>
                                         <li>
                                             <a href="/PartyPlanner/videos">Videos</a>
                                         </li>
                                         <li>
-                                            <a href="/contact">Contact</a>
+                                            <a href="/PartyPlanner/contact">Contact</a>
                                         </li>
                                     </ul>
                                 </nav>
