--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                             <a href="/PartyPlanner/index">home</a>
                                         </li>
                                         <li>
-                                            <a href="/PartyPlanner/about-insynk.php">about us</a>
+                                            <a href="/about-insynk.php">about us</a>
                                         </li>
                                         <li id="services">
                                             <a href="javascript:openmenu()">Services</a>
@@ -323,7 +323,7 @@
                                         From intimate gatherings to grand celebrations, we are committed to providing you with the highest quality of service and entertainment.</p>
                                     <br>
                                     <br>
-                                    <a href="about-insynk" class="button">read more</a>
+                                    <a href="/PartyPlanner/about-insynk" class="button">read more</a>
                                 </div>
                             </div>
                         </div>
